--- a/index.html
+++ b/index.html
@@ -3,8 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Oden Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h2 class="text-white">Header Logo</h2>
+        <div class="header-links">
+            <a href="#">header link 1</a>
+            <a href="#">header link 2</a>
+            <a href="#">header link 3</a>
+        </div>
+    </div>
+    <div class="top">
+        <h1 class="text-white">This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button class="text-white">Sign up</button>
+        <img src="#" alt="This is a placeholder for an image">
+    </div>
+    <div class="mid-top">
+        <h2>Some random information.</h2>
+        <div class="card">
+            <img src="#" alt="Card Image">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img src="#" alt="Card Image">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img src="#" alt="Card Image">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img src="#" alt="Card Image">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+    <div class="mid-bot">
+        <p>This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+        <p>Thor, God of Thunder</p>
+    </div>
+    <div class="bot">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button class="signup-button">Sign up</button>
+    </div>
+    <div class="footer">Copyright stamp</div>
 </body>
 </html>
