finish initial impl for project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <div class="header background-dark">
         <h2 class="text-white">Header Logo</h2>
         <div class="header-links">
             <a href="#">header link 1</a>
@@ -14,40 +14,48 @@
             <a href="#">header link 3</a>
         </div>
     </div>
-    <div class="top">
-        <h1 class="text-white">This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button class="text-white">Sign up</button>
+    <div class="top background-dark">
+        <div class="content-top">
+            <h1 class="text-white">This website is awesome</h1>
+            <p class="text-grey">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button class="signup-button text-white">Sign up</button>
+        </div>
         <img src="#" alt="This is a placeholder for an image">
     </div>
     <div class="mid-top">
         <h2>Some random information.</h2>
-        <div class="card">
-            <img src="#" alt="Card Image">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="card">
-            <img src="#" alt="Card Image">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="card">
-            <img src="#" alt="Card Image">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="card">
-            <img src="#" alt="Card Image">
-            <p>this is some subtext under an illustration or image</p>
+        <div class="cards">
+            <div class="card">
+                <img src="#" alt="Card Image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="#" alt="Card Image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="#" alt="Card Image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="#" alt="Card Image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
     <div class="mid-bot">
-        <p>This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
-        <p>Thor, God of Thunder</p>
+        <p class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+        <p class="quote-name">-Thor, God of Thunder</p>
     </div>
     <div class="bot">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button class="signup-button">Sign up</button>
+        <div class="bot-banner">
+            <div class="bot-banner-text text-white">
+                <p class="cta-text">Call to action! It's time!</p>
+                <p class="text-grey">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="signup-button text-white">Sign up</button>
+        </div>
     </div>
-    <div class="footer">Copyright stamp</div>
+    <div class="footer background-dark text-grey">Copyright stamp</div>
 </body>
 </html>
